src/snapshots/cargo_hawk__tests__auto_disabled.snap
---
source: src/main.rs
expression: terminal.backend()
---
" 1 check  2 test  3 clippy                                            Cargo Hawk"
"▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀"
"Watching for file changes...                                                    "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"┌Command───────────────────────────────────────────────────────────────────────┐"
"│cargo check                                                                   │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"q/Esc: Quit | i: Edit command | p: Edit plan | Enter/r: Run | a: Auto advance | "
